# Bulmages-1

./: .gitignore  AndroidManifest.xml  Readme  aclaracion.txt  build.xml  bulmafact.html  bulmatpv.html  contributors.txt  makedebrepos-stable  makedebrepos-unstable
bulmages/: CMakeLists.txt  Doxyfile  README  README.ca  README.en  README.es  README.fr  README.plugin_template  README.plugin_template.ca  README.plugin_template.en  README.plugin_template.fr  README.plugins.es  README.svn  README.txt  bulmages-recursos-graficos.qrc  bulmages.kdevelop  bulmages.pro  bulmages.qrc  bulmages_default_spa.qrc  bulmages_doxygen  bulmages_oxygen.qrc  bulmages_test.qrc  guia_de_estilo.sxw  index.htm  main.dox  myfooter.html  propuesta_guia_estilo.txt  prueba.txt
bulmages/CVS.adm/: MstData.stp  UsgData.stp  prjprm.stp
bulmages/ModulesCMake/: FindGettext.cmake  FindPCHSupport.cmake  FindPostgreSQL.cmake  FindQt5.cmake  MacrosBlI18n.cmake
bulmages/artículos/: Soft_libre pymes.sxw  Soft_libre_pymes.sxw
bulmages/bcontaweb/: ainteligentes.php  ainteligentes1.php  ainteligentes2.php  diario.php  impexp.php  nuevacuenta.php  selectcuenta.php  selectempresa.php  sincclientes.php  sincfacturas.php
bulmages/bulmacont/: CMakeLists.txt  Doxyfile  README  README.Bulmacont.es  bulmacont.pro  bulmacont_doxygen  bulmages.kdevelop
bulmages/bulmafact/: CMakeLists.txt  README  README.Bulmafact.es  bulmafact.kdevelop  bulmafact.pro
bulmages/bulmages/: CMakeLists.txt  Doxyfile  Makefile  README.BulmaGes.es  bulmages.kdevelop  bulmages.pro
bulmages/bulmalauncher/: CMakeLists.txt  README.BulmaLauncher.es
bulmages/bulmalib/: CMakeLists.txt  README  README.Bulmalib.es  abreempresabase.ui  abreempresadlg.ui  abreempresaview.cpp  abreempresaview.h  blwidget.cpp  blwidget.h  bulmalib.pro  bulmalib_ca.ts  bulmalib_de.ts  bulmalib_en.ts  bulmalib_es.qm  bulmalib_es.ts  bulmalib_fr.ts  bulmalib_zz.qm  bulmalib_zz.ts  busquedafecha.cpp  busquedafecha.h  busquedafechabase.ui  busquedaperiodo.cpp  busquedaperiodo.h  calendario.cpp  calendario.h  configuracion.cpp  configuracion.h  dbrecord.cpp  dbrecord.h  dialogchanges.cpp  dialogchanges.h  empresabase.cpp  empresabase.h  ficha.cpp  ficha.h  fixed.cpp  fixed.h  fixed.txt  funcaux.cpp  funcaux.h  (+40 more)
bulmages/bulmalibsrc/: abreempresabase.ui  abreempresaview.h  listventanas.cpp  qapplication2.cpp
bulmages/bulmaprogram/: bulmages
bulmages/bulmasetup/: .gitignore  CMakeLists.txt  README.Bulmasetup.ca  README.Bulmasetup.en  README.Bulmasetup.es  README.Bulmasetup.fr  about.py  aboutbase.py  aboutbase.ui  bulmasetup  bulmasetup.in  bulmasetup.ui  bulmasetup_aceptar.xpm  bulmasetup_ca.qm  bulmasetup_ca.ts  bulmasetup_cargarempresa.xpm  bulmasetup_editarusuario.xpm  bulmasetup_eliminarempresa.xpm  bulmasetup_eliminarusuario.xpm  bulmasetup_empresa.xpm  bulmasetup_empresabase.xpm  bulmasetup_en.qm  bulmasetup_en.ts  bulmasetup_es.qm  bulmasetup_es.ts  bulmasetup_fr.qm  bulmasetup_fr.ts  bulmasetup_nuevousuario.xpm  bulmasetup_usuario.xpm  bulmasetupbase.py  bulmasetupbase.ui  config.in  contabilidad.in  contabilidad.py  editarusuario.py  editarusuariobase.py  editarusuariobase.ui  eliminarempresa.in  eliminarempresa.py  eliminarempresabase.py  (+45 more)
bulmages/bulmatpv/: CMakeLists.txt  Makefile  README.Bulmatpv.es  bulmatpv.kdevelop  bulmatpv.kdevelop.pcs  bulmatpv.kdevses
bulmages/bulmatpv_nds/: Makefile.demo  Makefile.final  README.es
bulmages/db/: README  bulmages-db.psql  cuenta.tbl  metabd.psql  triggers.psql
bulmages/debian/: readme.html
bulmages/doc/: CMakeLists.txt  bulmacont.html  bulmafact.html  bulmasetup.html
bulmages/doxygen/: footer.htm  header.htm  index.dox
bulmages/fuentes/: Doxyfile  Makefile  bulmages.kdevelop  bulmages.kdevelop.pcs  bulmages.kdevses  bulmages.pro  fuentes.pro
bulmages/iglues/: home.php  iglues-yellow.css  iglues.css  iglues.webprj  index.html  index.php  navbar.inc
bulmages/installbulmages/: .bulmages-install.swp  .gitignore  CMakeLists.txt  README  README.es  actualizabulmages  borraremp  bulmacont.1  bulmacont.conf  bulmacont.conf.in  bulmafact.1  bulmafact.conf  bulmafact.conf.in  bulmages  bulmages.1  bulmages.conf  bulmages.conf.in  bulmatpv.conf  bulmatpv.conf.in  cargaemp  cargaemp.1  deinstallbulmages  guardaemp  guardaemp.1  installbulmages  installbulmages-client  installbulmages-db.in  installbulmages-server  nuevaemp  nuevaemp.1  pantallastpv.Readme  pantallastpv.xml  pg_hba.conf  rev-bulmacont-0_10_1.conf  rev-bulmages-0_11_1.conf  rev-bulmages-0_3_7.conf  rev-bulmages-0_4_3.conf  rev-bulmages-0_5_1.conf  rev-bulmages-0_5_9.conf  rev-bulmages-0_9_1.conf  (+3 more)
bulmages/introbulmages/: introbulmages.kdevelop
bulmages/nsis_bulmages/: bulmages_backup_nsis_script.nsi  bulmages_nsis_script.nsi  bulmages_restore_nsis_script.nsi  bulmatpv.vbs
bulmages/old-ts/: bulmacont_ca.qm  bulmacont_ca.ts  bulmacont_de.ts  bulmacont_en.qm  bulmacont_en.ts  bulmacont_es.qm  bulmacont_es.ts  bulmacont_fr.ts  bulmacont_zz.ts  bulmafact_ca.ts  bulmafact_de.ts  bulmafact_en.ts  bulmafact_es.ts  bulmafact_fr.ts  bulmafact_zz.ts  bulmages_ca.ts  bulmages_en.ts  bulmages_es.ts  bulmages_fr.ts  bulmalib_ca.ts  bulmalib_de.ts  bulmalib_en.ts  bulmalib_es.ts  bulmalib_fr.ts  pluginsubformods_en.ts  pluginsubformods_es.ts
bulmages/plugins/: plugins.pro
bulmages/presentaciones/: CVS.sxw  Manual de Jabber.sxw  Presentación IGLUES.sxw  README  bulmages.sxi  present_asoc_iglues.sxi  presentacion1.sxw  presentacion2.sxw
bulmages/python/: config.txt
bulmages/scripts/: apli.pl  btpvcatalog_url.csv  btpvgencatalog-qt.py  btpvgencatalog.py  bulmafact-genera_uicqt4  cambia_includes-qt3toqt4  convierteimagen  gencclientinst  genclientinst  genqclientinst  glabels.pl  iniciobase.py  iniciobase.ui  items.pl  qt3qt4includes  toglabels.pl  vinculartablas.sql  xdg-sudo
bulmages/tarjetas_visita/: cristina_marco.glabels  pablo_braulio.glabels  pablo_braulio2.glabels
bulmages/tests/: .gitignore  CMakeLists.txt  main.cpp  test_bulmalib.cpp  test_bulmalib.h  test_initial.cpp  test_initial.h  test_initial.moc
bulmages/web/: 01articulos.php  faq.php  (+29 more)
(+13715 files in other folders)
